[package]
name = "webhook_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = {version = "1.44.1", features = ["full"]}
tower = "0.5.2"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
hmac = "0.12.1"
sha2 = "0.10.8"
dotenv = "0.15.0"
hex = "0.4.3"
headers = "0.4.0"
bytes = "1.10.1"
